[metadata]
name = dl-plus-extractor-un1def-wasdtv
version = attr: dl_plus.extractors.un1def.wasdtv.__version__
author = un.def
author_email = me@undef.im

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    dl-plus
    youtube-dl
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
