[metadata]
name = dl-plus-extractor-un1def-wasdtv
version = attr: dl_plus.extractors.un1def.wasdtv.__version__
description = A dl-plus extractor plugin for WASD.TV streaming platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un-def/dl-plus-extractor-un1def-wasdtv
author = un.def
author_email = me@undef.im
license = MIT
license_file = LICENSE

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    dl-plus >= 0.3
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
